# ransac-line

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test_all.sh
bindings/python/: MANIFEST.in  pyproject.toml  test.py
bindings/python/ransac_line/: __init__.py  build_ffi.py  pyproject.toml  wrapper.py
src/: ransac_line.c  ransac_line.h
tests/: CMakeLists.txt  test_foo.c  test_ransac_line.c  test_ransac_line_complex.c
